eks/backend/nodejs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-app-ingress
  namespace: backend-namespace
  annotations:
    #   #   # This annotation is specific to the NGINX Ingress controller
    nginx.ingress.kubernetes.io/rewrite-target: /
    argocd.argoproj.io/sync-wave: "0" # Apply after secrets and deployments
    argocd.argoproj.io/hook: PostSync
spec:
  rules:
    - host: api.test.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs-app-service
                port:
                  number: 80
